Added new menu items and fixed their responsivnes.

--- a/article.html
+++ b/article.html
@@ -315,70 +315,8 @@
     </div>
 
     <!-- MAIN BODY -->
-    <section class="main_body_contents">
+    <section class="main_body_contents single_article">
         <div class="container">
-            <!-- Scroller vijesti -->
-            <div class="skroler-novosti-modul">
-                <div class="news-label">Najnovije</div>
-                <div id="skroler-novosti" class="carousel fdi-Carousel slide">
-
-                    <div class="carousel fdi-Carousel slide" id="eventCarousel" data-interval="0">
-                        <div class="carousel-inner onebyone-carosel">
-                            <div class="item active">
-                                <div class="col-xs-12 col-md-6">
-                                    <a class="link-novosti" href="#">
-                                        <span class="kategorija-novosti">
-                                                VIJESTI / SVIJET:
-                                            </span>
-                                        <span class="naslov-novosti">
-                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
-                                            </span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="col-md-6">
-                                    <a class="link-novosti" href="#">
-                                        <span class="kategorija-novosti">
-                                                LIČNOSTI / svijet:
-                                            </span>
-                                        <span class="naslov-novosti">
-                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
-                                            </span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="col-md-6">
-                                    <a class="link-novosti" href="#">
-                                        <span class="kategorija-novosti">
-                                                LIČNOSTI / svijet:
-                                            </span>
-                                        <span class="naslov-novosti">
-                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
-                                            </span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="col-md-6">
-                                    <a class="link-novosti" href="#">
-                                        <span class="kategorija-novosti">
-                                                VIJESTI / SVIJET:
-                                            </span>
-                                        <span class="naslov-novosti">
-                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
-                                            </span>
-                                    </a>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="next-label"><a id="dalje"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></div>
-            </div>
-            <!-- Kraj skrolera -->
 
             <div class="wrapper-vijesti remargin">
 
@@ -394,62 +332,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="wrap-ostalih-vijesti remargin">
-                        <div class="col-sm-6 col-md-6 card card-vijest ">
-                            <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic11.jpg">
-                            <div class="card-opis-vijesti">
-                                <p class="card-kategorija">Vijesti / SVIJET</p>
-                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
-                                <div class="card-count-label">
-                                    <p>100</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-6 card card-vijest ">
-                            <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic12.jpg">
-                            <div class="card-opis-vijesti">
-                                <p class="card-kategorija">Vijesti / SVIJET</p>
-                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
-                                <div class="card-count-label">
-                                    <p>100</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-6 card-newsletter card-vijest ">
-                            <div class="card-opis-vijesti">
-                                <h1 class="card-naslov-vijesti">Newsletter</h1>
-                                <form>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="usrname" placeholder="Ime i prezime">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" id="email" placeholder="e-mail adresa">
-                                    </div>
-                                    <div class="form-group">
-                                        <a href="#" class="card-button" onclick="$(this).closest('form').submit()">
-                                            <span class="card-button-ikona">
-                                            <i class="fa fa-ban" aria-hidden="true"></i>
-                                        </span>
-                                            <span class="card-button-tekst">prijavi se</span>
-                                        </a>
-                                    </div>
-                                </form>
-                                <div class="card-count-label">
-                                    <p>100</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6 col-md-6 card card-vijest">
-                            <img class="img-responsive " src="http://placehold.it/400x300&text=Place for ads">
-
-                        </div>
-                    </div>
                 </div>
                 <div class="col-md-4 kolona-najcitanije ">
-                    <h1 class="naslov-kolone ">Najčitanije</h1>
+                    <h1 class="naslov-kolone ">Povezano</h1>
                     <div class="wrap-najcitanije remargin">
                         <div class="col-xs-12 col-sm-6 col-md-12 card ">
                             <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic1.jpg">
@@ -473,21 +358,33 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-12 card ">
-                            <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic2.jpg">
+                        <div class="col-xs-12 col-sm-6 col-md-12  card card-vijest card-registar card-tenderi">
+                            <h2 class="module-label tenderi"><span>TENDERI</span></h2>
                             <div class="card-opis-vijesti">
+                                <li>
+                                    <p class="card-kategorija">Vijesti / SVIJET</p>
+                                    <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                </li>
+                                <li>
+                                    <p class="card-kategorija">Vijesti / SVIJET</p>
+                                    <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                </li>
+                                <li>
+                                    <p class="card-kategorija">Vijesti / SVIJET</p>
+                                    <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                </li>
                                 <p class="card-kategorija">Vijesti / SVIJET</p>
                                 <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
                                 <div class="card-count-label">
-                                    <p>100</p>
+                                    <p>Više tekstova TENDERI</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-12 card ">
-                            <a href="#" class="side-link-button zeleni"><i class="fa fa-android" aria-hidden="true"></i> Akta aplikacija <span class="label-download">DOWNLOAD<span></a>
-                            <a href="#" class="side-link-button crni"><i class="fa fa-apple" aria-hidden="true"></i> Akta aplikacija <span class="label-download">DOWNLOAD<span></a>
+                        <div class="col-xs-12 col-sm-6 col-md-12  card card-vijest">
+                            <img class="img-responsive " src="http://placehold.it/400x300&amp;text=Place for ads">
+
                         </div>
+
                     </div>
                 </div>
 
@@ -746,28 +643,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-4 card card-vijest card-registar card-tenderi">
-                            <h2 class="module-label tenderi"><span>TENDERI</span></h2>
-                            <div class="card-opis-vijesti">
-                                <li>
-                                    <p class="card-kategorija">Vijesti / SVIJET</p>
-                                    <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                </li>
-                                <li>
-                                    <p class="card-kategorija">Vijesti / SVIJET</p>
-                                    <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                </li>
-                                <li>
-                                    <p class="card-kategorija">Vijesti / SVIJET</p>
-                                    <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                </li>
-                                <p class="card-kategorija">Vijesti / SVIJET</p>
-                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                <div class="card-count-label">
-                                    <p>Više tekstova TENDERI</p>
-                                </div>
-                            </div>
-                        </div>
+
 
                         <div class="col-sm-6 col-md-4 card card-vijest ">
                             <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic6.jpg">
