--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
                         <li><a href="#">Najave</a></li>
                         <li><a href="#">Ličnosti</a></li>
                         <li><a href="#">Karijera</a></li>
+                        <li><a href="#">Kolumne</a></li>
                         <li><a href="#">Pauza</a></li>
+                        <li><a href="#">Filantropi</a></li>
                     </ul>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars" aria-hidden="true"></i></a>
 
