Responsive layout fixes.

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-12 card ">
+                        <div class="col-xs-12 col-sm-12 col-md-12 card ">
                             <h2 class="module-label top5"><span>TOP 5 VIJESTI</span></h2>
                             <div id="exTab3" class="tabs_module">
                                 <ul class="nav nav-pills tabs">
@@ -977,11 +977,11 @@
                                 <h1 class="card-naslov-vijesti">Kreditni kalkulator</h1>
                                 <form>
                                     <div class="form-group has-feedback">
-                                        <div class="col-sm-6" style="padding-right:0;">
+                                        <div class="col-sm-12 col-md-6" style="padding-right:0;">
                                             <input type="text" class="form-control input-padding" placeholder="Iznos kredita (KM)">
 
                                         </div>
-                                        <div class="col-sm-6 ">
+                                        <div class="col-sm-12 col-md-6">
                                             <input type="text" class="form-control" placeholder="Tip kamatne stope">
                                             <span class="form-control-feedback">
                                                 <i class="fa fa-sort" aria-hidden="true"></i>
@@ -990,11 +990,11 @@
 
                                     </div>
                                     <div class="form-group has-feedback">
-                                        <div class="col-sm-6 " style="padding-right:0;">
+                                        <div class="col-sm-12 col-md-6 " style="padding-right:0;">
                                             <input type="select" class="form-control input-padding" placeholder="Kamatna stopa (%)">
                                         </div>
 
-                                        <div class="col-sm-6">
+                                        <div class="col-sm-12 col-md-6">
                                             <input type="text" class="form-control" placeholder="Period otplate">
                                             <span class="form-control-feedback">
                                                 <i class="fa  fa-sort" aria-hidden="true"></i>
@@ -1002,10 +1002,10 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="col-sm-6 " style="padding-right:0;">
+                                        <div class="col-sm-12 col-md-6 " style="padding-right:0;">
                                             <input type="select" class="form-control input-padding" placeholder="Iznos mjesečne rate (KM)">
                                         </div>
-                                        <div class="col-sm-6 " style="position:relative;">
+                                        <div class="col-sm-12 col-md-6" style="position:relative;">
                                             <a href="#" class="card-button" onclick="$(this).closest('form').submit()">
                                                 <span class="card-button-ikona"><i class="fa fa-ban" aria-hidden="true"></i></span><span class="card-button-tekst">Izračunaj</span>
                                             </a>
@@ -1153,7 +1153,7 @@
             <div class="wrap-kolona remargin">
                 <div class="col-md-12 ">
                     <div id="licnosti-wrap" class=" row">
-                        <div class="col-sm-6 col-md-4 card card-vijest">
+                        <div class="col-sm-12 col-md-4 card card-vijest">
 
                             <h1 class="naslov-kolone ">Ličnosti</h1>
                             <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic8.jpg">
@@ -1166,7 +1166,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-4 card card-vijest ">
+                        <div class="col-sm-12 col-md-4 card card-vijest ">
                             <h1 class="naslov-kolone ">Filantropi</h1>
                             <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic9.jpg">
                             <div class="card-opis-vijesti">
@@ -1178,7 +1178,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-4 card card-vijest">
+                        <div class="col-sm-12 col-md-4 card card-vijest">
                             <h1 class="naslov-kolone ">Kolumna</h1>
                             <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic3.jpg">
                             <div class="card-opis-vijesti">
