--- a/article.html
+++ b/article.html
@@ -368,7 +368,7 @@
                             <a id="preuzimanjeDokumenta" class="docDownload">nazivdokumenta.pdf</a>
                             <div class="separator"></div>
                             <div class="bottomToolbar">
-                                <span class="preuzmiDoc">PODIJELI:  </span><span class="vijestOutreachIcon"></span>
+                                <span class="preuzmiDoc">PODJELI:  </span><span class="vijestOutreachIcon"></span>
                                 <span class="count">12345</span>
                                 <i class="fa fa-print" aria-hidden="true"></i> <span class="preuzmiDoc">SAČUVAj:</span>
                                 <i class="fa fa-bookmark" aria-hidden="true"></i>
