--- a/article.html
+++ b/article.html
@@ -370,7 +370,7 @@
                             <div class="bottomToolbar">
                                 <span class="preuzmiDoc">PODJELI:  </span><span class="vijestOutreachIcon"></span>
                                 <span class="count">12345</span>
-                                <i class="fa fa-print" aria-hidden="true"></i> <span class="preuzmiDoc">SAČUVAj:</span>
+                                <i class="fa fa-print" aria-hidden="true"></i> <span class="preuzmiDoc">SAČUVAJ:</span>
                                 <i class="fa fa-bookmark" aria-hidden="true"></i>
                                 <br><br>
                                 <span class="preuzmiDoc">TAGOVI:  </span><span class="count tag">
