--- a/article.html
+++ b/article.html
@@ -327,7 +327,61 @@
                         <div class="galerija">
 
                             <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic10.jpg">
-                            <div class="galerijaCta"><a class="otvoriGaleriju"><i class="fa fa-camera" aria-hidden="true"></i>  OTVORI GALERIJU </a></div>
+                            <div class="galerijaCta">
+                                <a class="otvoriGaleriju" data-toggle="modal" data-target="#galerija"><i class="fa fa-camera" aria-hidden="true"></i>  OTVORI GALERIJU </a>
+
+                                <!-- Modal -->
+                                <div id="galerija" class="modal fade" role="dialog">
+                                    <div class="modal-dialog">
+
+                                        <!-- Modal content-->
+                                        <div class="modal-content">
+                                            <div class="modal-body">
+                                                <div id="slikeCarousel" class="carousel slide" data-ride="carousel">
+                                                    <!-- Indicators -->
+                                                    <ol class="carousel-indicators">
+                                                        <li data-target="#slikeCarousel" data-slide-to="0" class="active"></li>
+                                                        <li data-target="#slikeCarousel" data-slide-to="1"></li>
+                                                        <li data-target="#slikeCarousel" data-slide-to="2"></li>
+                                                        <li data-target="#slikeCarousel" data-slide-to="3"></li>
+                                                    </ol>
+
+                                                    <!-- Wrapper for slides -->
+                                                    <div class="carousel-inner" role="listbox">
+                                                        <div class="item active">
+                                                            <img src="./images/dummy/pic1.jpg" alt="Chania">
+                                                        </div>
+
+                                                        <div class="item">
+                                                            <img src="./images/dummy/pic2.jpg" alt="Chania">
+                                                        </div>
+
+                                                        <div class="item">
+                                                            <img src="./images/dummy/pic3.jpg" alt="Flower">
+                                                        </div>
+
+                                                        <div class="item">
+                                                            <img src="./images/dummy/pic4.jpg" alt="Flower">
+                                                        </div>
+                                                    </div>
+
+                                                    <!-- Left and right controls -->
+                                                    <a class="left carousel-control" href="#slikeCarousel" role="button" data-slide="prev">
+                                                        <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                                                        <span class="sr-only">Previous</span>
+                                                    </a>
+                                                    <a class="right carousel-control" href="#slikeCarousel" role="button" data-slide="next">
+                                                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                                                        <span class="sr-only">Next</span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
                         <div class="card-opis-vijesti">
                             <p class="card-kategorija">Vijesti / SVIJET</p>
